<resources>
    <string name="app_name">NutriMatch</string>
    <string name="logo_description">NutriMatch Logo</string>


    <!-- ErrorMessage -->
    <string name="no_connection_error_message">Opps, the internet connection is lost. Recheck your connection.</string>
    <string name="timeout_error_message">Connection timeout. Please try for a while longer.</string>
    <string name="client_error_message">An error occurred in the application. Please try for a while longer.</string>
    <string name="server_error_message">There is a server problem. Please try for a while longer</string>
    <string name="unknown_error_message">An unexpected error occurred. Please contact our customer service for further assistance.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="login_slogan">In a healthy body,\nthere is a strong soul.</string>
    <string name="back">Back</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="register_slogan">Start the journey to\na healthy life\nfrom now.</string>
    <string name="fullname">Fullname</string>
    <string name="birthday">Birthday</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_scan_food">Scan Food</string>
    <string name="title_profile">Profile</string>
    <string name="body_measurement_slogan">Enter your\nbody measurements.</string>
    <string name="next">Next</string>
    <string name="height">Height (cm)</string>
    <string name="weight">Weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="activities_level">Activities Level</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="success_register">Registration is complete.</string>
    <string name="register_success_subtitle">Please login to access the application.</string>
    <string name="account_information">Account Information</string>
    <string name="body_measurements">Body Measurements</string>
    <string name="height_title">Height</string>
    <string name="weight_title">Weight</string>
    <string name="activity_level">Activity Level</string>
    <string name="email_filed_helper">E-mail must be filled in</string>
    <string name="password_filed_helper">Password must be filled in</string>
    <string name="invalid_email_helper">Invalid email</string>
    <string name="password_description">Your password is in accordance with\nour terms.</string>
    <string name="logout">Logout</string>
    <string name="access_denied">Access Denied!</string>
    <string name="image_onboarding_description">"Image onboarding "</string>
    <string name="protein">Protein</string>
    <string name="carb">Carb</string>
    <string name="fat">Fat</string>
    <string name="lunch">Lunch</string>
    <string name="breakfast">Breakfast</string>
    <string name="dinner">Dinner</string>
    <string name="calories_left">Calories left</string>
    <string name="edit_button">Edit Button</string>
    <string name="logout_button_desc">Logout button</string>
    <string name="save">Save</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="edit_password">Edit Password</string>
    <string name="low_activity_description">I usually exercise 1x with low intensity or no exercise in a week. And have never followed a regular exercise program</string>
    <string name="medium_activity_description">I usually exercise 2–3x with medium intensity in a week. And have never followed a regular exercise program</string>
    <string name="high_activity_description">I usually exercise 3–5x with high intensity in a week. And have participated in regular exercise programs</string>
    <string name="height_input_required">Height is required</string>
    <string name="weight_input_required">Weight is required</string>
    <string name="calories_input_required">Calories is required</string>
    <string name="gender_input_required">Gender is required</string>
    <string name="activities_level_input_required">Activities Level is required</string>
    <string name="edit_account_information">Edit Account Information</string>
    <string name="fullname_input_required">Fullname is required</string>
    <string name="birthday_input_required">Birthday is required</string>
    <string name="reached_calories_target">Your calories target has been reached, reduce your food intake today ^_^</string>
    <string name="food_weight">Food Weight</string>
    <string name="submit">Submit</string>
    <string name="preview_capture">Preview Capture</string>
    <string name="nutritional_content">Nutritional Content</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_nutritional_content">Add Nutritional Content</string>
    <string name="food_name">Food Name</string>
    <string name="add">Add</string>
    <string name="food_name_input_required">Food name is required</string>
    <string name="protein_input_required">Protein is required</string>
    <string name="fat_input_required">Fat is required</string>
    <string name="carbs_input_required">Carbs is required</string>
    <string name="edit_nutritional_content">Edit Nutritional Content</string>
    <string name="food_nutrition_required">Food nutrition should not be empty</string>
    <string name="close">Close</string>
    <string name="input_manually">Input Manually</string>
    <string name="calories_kcal">Calories (kcal)</string>
    <string name="yes">Yes</string>
    <string name="title_alert">Ooops!</string>
    <string name="alert_description">Your food is not detected on our model. Want to input it manually?</string>
</resources>